force-app/main/default/objects/DRCiWebServiceConfig__c/DRCiWebServiceConfig__c.object-meta.xml
<CustomObject>
    <description>Used to configure access to the regional instances of the DRCi Web Service API.</description>
    <label>AlfrescoWebServiceConfig</label>
    <nameField>
        <label>Alfresco Config Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AlfrescoWebServiceConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>