force-app/main/default/objects/DRCiWebServiceConfig__c/fields/DRCi_Password_Last_Changed__c.field-meta.xml
<CustomField>
    <fullName>DRCi_Password_Last_Changed__c</fullName>
    <description>Shows the date the DRCi password was last changed</description>
    <label>Alfresco Password Last Changed</label>
    <type>DateTime</type>
</CustomField>