force-app/main/default/objects/DRCiWebServiceConfig__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>DRCi Web Service Endpoing</description>
    <label>Endpoint</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>