force-app/main/default/objects/DRCiWebServiceConfig__c/fields/Instance__c.field-meta.xml
<CustomField>
    <fullName>Instance__c</fullName>
    <label>Instance</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>