force-app/main/default/objects/DRCiWebServiceConfig__c/fields/Locked_For_Pooled_Session_Update__c.field-meta.xml
<CustomField>
    <fullName>Locked_For_Pooled_Session_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Locked For Pooled Session Update</label>
    <type>Checkbox</type>
</CustomField>