force-app/main/default/objects/DRCiWebServiceConfig__c/fields/Pooled_Session_Cookie__c.field-meta.xml
<CustomField>
    <fullName>Pooled_Session_Cookie__c</fullName>
    <description>Cookie for accessing the DRCi web Service Instance</description>
    <label>Pooled Session Cookie</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>